<resources>
    <string name="app_name">Memorich</string>
    <string name="size">Size:</string>
    <string name="size_formatter">%s %d</string>
    <string name="enter_new_deck_name">Enter new deck name</string>
    <string name="add">Add</string>
    <string name="set_name_for_deck">Set name for a new deck</string>
    <string name="i_remember">I remember</string>
    <string name="repeat_later">Repeat later</string>
    <string name="cards_size">/%d</string>
    <string name="zero_number">0</string>
    <string name="enter_card_s_front_side">Enter card\'s front side</string>
    <string name="enter_card_s_back_side">Enter card\'s back side</string>
    <string name="enter_front_side_of_a_card">Enter front side of a card</string>
    <string name="enter_back_side_of_a_card">Enter back side of a card</string>
    <string name="add_card">Add card</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="deck_deleted">Deck deleted</string>
    <string name="save">Save</string>
    <string name="set_new_name_for_deck">Set a new name</string>
    <string name="train">Train</string>
    <string name="undo">UNDO</string>
    <string name="press_undo_to_cancel">Press UNDO to abort deletion</string>
    <string name="training_result">Your result is %.1f%%</string>
    <string name="repeat_forgotten">Repeat forgotten</string>
    <string name="finish">Finish</string>
    <string name="restart">Restart</string>
    <string name="finish_training_or_repeat_forgotten_cards">Overview cards in the deck, finish or restart training:</string>
    <string name="overview">Overview</string>
    <string name="add_card_pls">Please, add at least one card!</string>
    <string name="added_deck_formatter">Deck \'%s\' was added!</string>
    <string name="renamed_deck_formatter">Deck \'%s\' was renamed!</string>
    <string name="deleted_deck_formatter">Deck \'%s\' was deleted!</string>
    <string name="card_added">Card was added!</string>
    <string name="card_updated">Card was updated!</string>
    <string name="cards_order_modified">Cards order was modified!</string>
    <string name="card_deleted">Card was deleted!</string>
    <string name="toolbar_cards">Tap or hold to drag-n-drop:</string>
    <string name="toolbar_decks">My decks - tap to start:</string>

</resources>
