<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/margin_8"
    android:paddingTop="@dimen/dimen_48"
    android:paddingEnd="@dimen/margin_8"
    android:paddingBottom="@dimen/dimen_48">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/result_border"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="168dp"
            android:layout_height="168dp"
            android:layout_marginTop="@dimen/margin_16"
            android:src="@drawable/image_result" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="Your result is 88.8%" />

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/finish_training_or_repeat_forgotten_cards"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_observe"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_16"
                android:layout_weight="1"
                android:text="@string/overview"
                android:textColor="@android:color/black"
                android:theme="@style/ObserveButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_finish"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_16"
                android:layout_weight="1"
                android:text="@string/finish" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_restart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_16"
                android:layout_weight="1"
                android:text="@string/restart"
                android:theme="@style/RememberButton" />


        </LinearLayout>


    </LinearLayout>

</FrameLayout>
